PW-61: Fix post header and body padding on smaller screens

--- a/components/PostHeader/PostHeader.module.scss
+++ b/components/PostHeader/PostHeader.module.scss
@@ -11,13 +11,15 @@
   padding-top: calc(#{nav.$topBarHeight} + 169px);
   margin-top: -(nav.$topBarHeight);
 
-  @include media(0, 'sm') {
+  @include media(0, 'md') {
     padding: rem-calc(32 20 90 20);
+    padding-top: calc(#{nav.$topBarHeight} + 32px);
     margin-bottom: rem-calc(91);
   }
 
   @include media('md', 'lg') {
     padding: rem-calc(74 20 156 20);
+    padding-top: calc(#{nav.$topBarHeight} + 74px);
     margin-bottom: rem-calc(145);
   }
 }
